--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Cython==3.0.12
 debugpy==1.8.13
 decorator==5.2.1
 dotenv==0.9.9
+et_xmlfile==2.0.0
 exceptiongroup==1.2.2
 executing==2.2.0
 fonttools==4.57.0
@@ -36,6 +37,7 @@ matplotlib-inline==0.1.7
 narwhals==1.33.0
 nest-asyncio==1.6.0
 numpy==2.2.4
+openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
